Inline overflow fix and Post Info on Hover added

--- a/src/css/General.css
+++ b/src/css/General.css
@@ -69,15 +69,11 @@ body {
 :root.reply-fit-width .post.reply {
   overflow: hidden !important;
 }
-:root.reply-fit-width .hasInline>.reply.post,
-:root.reply-fit-width .expanded-image>.reply.post {
-  overflow: visible !important;
-}
 :root.reply-fit-width .expanded-image>.post::after,
 :root.reply-fit-width .hasInline>.reply.post::after {
-  clear:both !important;
-  content:'' !important;
-  display:block !important;
+  clear: both !important;
+  content: '' !important;
+  display: block !important;
 }
 .threadContainer .hide-reply-button {
   margin-left: -12px !important;
@@ -572,4 +568,23 @@ table.flashListing .highlightPost {
 :root.thumb-opacity .fileThumb:hover {
   opacity: 1.0;
   transition: opacity .3s ease-in 0s;
+}
+/* Post Info on Hover */
+:root.info-on-hover .file .fileText {
+  opacity: 0; 
+  height: 0;
+  transition: opacity .3s ease-out 0s;
+  pointer-events: none;
+}
+:root.info-on-hover .file:hover .fileText {
+  opacity: 1;
+  height: auto;
+  transition: opacity .3s ease-in 0s;
+  pointer-events: auto;
+}
+:root.info-on-hover .postNum {
+  font-size: 0px !important;
+}
+:root.info-on-hover .postContainer:hover .postNum {
+  font-size:" + $SS.conf["Font Size"] + "px !important;
 }
